# smart-wheelchair

./: .gitignore  LICENSE  README.md  ultra2.py.py  ultrasonic.py
LSM9DS1 Arduino Lib/ArduinoBlue/: ArduinoBlue.ino
LSM9DS1 Arduino Lib/think/: RTIMU.cpp  RTIMU.h  RTIMULSM9DS1.cpp  RTIMULSM9DS1.h  RTIMULibDefs.h  RTIMUSettings.cpp  RTIMUSettings.h  RTMath.cpp
capstone_rosws/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
capstone_rosws/devel/include/imu_visual/: Num.h
capstone_rosws/devel/lib/pkgconfig/: drive_wheelchair.pc  imu_visual.pc  point_cloud.pc  point_cloud_high_fidelty.pc  rtimulib_ros.pc  ydlidar.pc
capstone_rosws/devel/lib/point_cloud/: point_cloud
capstone_rosws/devel/lib/ydlidar/: ydlidar_client  ydlidar_node
capstone_rosws/src/drive_wheelchair/: CMakeLists.txt
capstone_rosws/src/drive_wheelchair/launch/: wheelchair.launch
capstone_rosws/src/drive_wheelchair/src/: danger_checker.py  danger_checker_back.py  drive.py  wheelchair.py  wheelchairNew.py  wheelchairUSB.py
capstone_rosws/src/imu_visual/: CMakeLists.txt  package.xml
capstone_rosws/src/point_cloud/: CMakeLists.txt  package.xml
capstone_rosws/src/point_cloud_high_fidelty/: CMakeLists.txt  package.xml
esc_test/pwm.ino/: pwm.ino.ino
imu_test/IMU/: IMU.ino
imu_test/src/: main.cpp
lidar_project/lidar/: lidar.ino
matlab/: find_position.m  my_serial.m  plot_trajectory.m  serial.mat
pi_scripts/: PWM_test.py  drive_with_IMU.py  new_pwm.py  receive_IMU.py  script.sh.txt  serial_test.py  str_delimit_test.py  victors_test_pwm.py
scripts/: publish_fake_imu.bash
(+19 files in other folders)
